--- a/tools/free-fire-ban-check.html
+++ b/tools/free-fire-ban-check.html
@@ -106,10 +106,34 @@
         statusEl.className = 'font-semibold ' + (ok ? 'text-green-600' : 'text-red-500');
       }
 
-      async function fetchWithFallback(url){
-        const r = await fetch(url, { mode: 'cors' });
-        if (!r.ok) throw new Error('Request failed: ' + r.status);
-        return await r.text();
+      async function fetchBan(uid){
+        let url = 'https://check.sukhdaku.qzz.io/check?uid=' + encodeURIComponent(uid);
+        try{
+          const r = await fetch(url, { mode: 'cors' });
+          if (!r.ok) throw new Error('Request failed: ' + r.status);
+          return await r.text();
+        }catch(e){
+          const r2 = await fetch('https://r.jina.ai/' + url);
+          if (!r2.ok) throw new Error('Request failed (fallback): ' + r2.status);
+          return await r2.text();
+        }
+      }
+
+      function parseMaybeWrappedJSON(raw){
+        try { return JSON.parse(raw); } catch(_) {}
+        // jina.ai sometimes wraps as: "Title: ... Markdown Content: { ... }"
+        var first = raw.indexOf('{');
+        var last = raw.lastIndexOf('}');
+        if (first !== -1 && last !== -1 && last > first){
+          var slice = raw.slice(first, last + 1);
+          try { return JSON.parse(slice); } catch(_) {}
+        }
+        // try to extract with regex
+        try{
+          var m = raw.match(/\{[\s\S]*\}/);
+          if (m) return JSON.parse(m[0]);
+        }catch(_) {}
+        throw new Error('Invalid JSON: ' + raw.slice(0, 120));
       }
 
       async function onClick(){
@@ -121,11 +145,8 @@
         dateEl.textContent = '—';
         statusEl.textContent = '—'; statusEl.className = 'font-semibold';
         try{
-          var base = 'https://check.sukhdaku.qzz.io/check?uid=';
-          var url = base + encodeURIComponent(uid);
-          var raw = await fetchWithFallback(url);
-          var data;
-          try { data = JSON.parse(raw); } catch(e) { throw new Error('Invalid JSON: ' + raw.slice(0,120)); }
+          var raw = await fetchBan(uid);
+          var data = parseMaybeWrappedJSON(raw);
           nick.textContent = data.nikname || data.nickname || '—';
           level.textContent = data.level != null ? String(data.level) : '—';
           region.textContent = data.region || '—';
