--- a/tools/free-fire-visits-increaser.html
+++ b/tools/free-fire-visits-increaser.html
@@ -42,22 +42,41 @@
     <div class="max-w-2xl mx-auto px-4 sm:px-6">
       <a href="../index.html#tools" class="inline-flex items-center gap-1 text-gray-500 dark:text-gray-400 hover:text-amber-500 dark:hover:text-amber-400 text-sm font-medium mb-6">← Back to Tools</a>
       <h1 class="text-2xl font-bold text-gray-900 dark:text-white mb-1">Free Fire Visits Increaser</h1>
-      <p class="text-gray-500 dark:text-gray-400 mb-6">Profile visits badhane ke liye tool. (Note: Real visits game ke through hi count hoti hain; ye tool sirf tips aur share options deta hai.)</p>
+      <p class="text-gray-500 dark:text-gray-400 mb-6">Yeh tool aapke UID aur region par backend API trigger karta hai, jisse success/fail counts aur likes dikhte hain. Demo purpose ke liye: API endpoint ko directly hit karke result yahan show hota hai.</p>
 
-      <div class="rounded-2xl border border-gray-200/60 dark:border-white/10 bg-white/70 dark:bg-black/60 backdrop-blur-xl p-5 mb-5 transition-all duration-300">
-        <label class="block font-medium text-gray-900 dark:text-white mb-2">Tips to get more profile visits</label>
-        <ul class="list-disc pl-6 text-gray-600 dark:text-gray-400 space-y-2">
-          <li>Apni ID social media par share karein (YouTube, Instagram bio).</li>
-          <li>Clan join karein aur active rahein.</li>
-          <li>Rank push karke leaderboard par aayein.</li>
-          <li>Custom rooms create karke invite link share karein.</li>
-        </ul>
-      </div>
+      <!-- Tips box removed as requested -->
 
-      <div class="rounded-2xl border border-gray-200/60 dark:border-white/10 bg-white/70 dark:bg-black/60 backdrop-blur-xl p-5 transition-all duration-300">
-        <label for="visit-id" class="block font-medium text-gray-900 dark:text-white mb-2">Your Player ID (share ke liye)</label>
-        <input type="text" id="visit-id" placeholder="Your ID yahan daalein" class="w-full px-4 py-3 rounded-lg bg-gray-50 dark:bg-black/40 border border-gray-200 dark:border-white/10 text-gray-900 dark:text-white placeholder-gray-400 focus:ring-2 focus:ring-amber-500 focus:border-transparent transition-colors">
-        <button type="button" class="mt-4 px-5 py-2.5 rounded-lg bg-amber-500 hover:bg-amber-600 text-gray-900 font-semibold transition-colors btn-copy-id">Copy ID to Share</button>
+      <!-- Share ID box removed as requested -->
+
+      <div class="rounded-2xl border border-gray-200/60 dark:border-white/10 bg-white/70 dark:bg-black/60 backdrop-blur-xl p-5 mt-5 transition-all duration-300">
+        <label class="block font-medium text-gray-900 dark:text-white mb-2">Run Visits (demo)</label>
+        <div class="grid grid-cols-1 sm:grid-cols-3 gap-3">
+          <div>
+            <label for="visits-uid" class="text-xs text-gray-500 dark:text-gray-400">Player ID / UID</label>
+            <input type="text" id="visits-uid" placeholder="e.g. 2235807298" class="w-full mt-1 px-3 py-2 rounded-lg bg-gray-50 dark:bg-black/40 border border-gray-200 dark:border-white/10 text-gray-900 dark:text-white placeholder-gray-400">
+          </div>
+          <div>
+            <label for="visits-region" class="text-xs text-gray-500 dark:text-gray-400">Region (custom)</label>
+            <input type="text" id="visits-region" value="ind" placeholder="e.g. ind" class="w-full mt-1 px-3 py-2 rounded-lg bg-gray-50 dark:bg-black/40 border border-gray-200 dark:border-white/10 text-gray-900 dark:text-white placeholder-gray-400">
+          </div>
+          <div class="flex items-end">
+            <button type="button" class="w-full sm:w-auto px-5 py-2.5 rounded-lg bg-amber-500 hover:bg-amber-600 text-gray-900 font-semibold transition-colors btn-start-visits">Start Visits</button>
+            <span id="visits-loading" class="ml-3 text-sm text-gray-500 dark:text-gray-400 hidden">Processing…</span>
+          </div>
+        </div>
+        <div id="visits-result" class="rounded-xl border border-gray-200/60 dark:border-white/10 bg-white/60 dark:bg-black/40 p-4 mt-4 hidden">
+          <div class="grid grid-cols-1 sm:grid-cols-3 gap-3 mb-2">
+            <div><div class="text-xs text-gray-500 dark:text-gray-400">Nickname</div><div id="vr-nick" class="font-semibold text-gray-900 dark:text-white">—</div></div>
+            <div><div class="text-xs text-gray-500 dark:text-gray-400">Level</div><div id="vr-level" class="font-semibold text-gray-900 dark:text-white">—</div></div>
+            <div><div class="text-xs text-gray-500 dark:text-gray-400">Region</div><div id="vr-region" class="font-semibold text-gray-900 dark:text-white">—</div></div>
+          </div>
+          <div class="grid grid-cols-1 sm:grid-cols-3 gap-3">
+            <div><div class="text-xs text-gray-500 dark:text-gray-400">Likes</div><div id="vr-likes" class="font-semibold text-gray-900 dark:text-white">—</div></div>
+            <div><div class="text-xs text-gray-500 dark:text-gray-400">Success</div><div id="vr-success" class="font-semibold text-green-600">—</div></div>
+            <div><div class="text-xs text-gray-500 dark:text-gray-400">Fail</div><div id="vr-fail" class="font-semibold text-red-500">—</div></div>
+          </div>
+          <p id="vr-text" class="text-sm text-gray-500 dark:text-gray-400 mt-3"></p>
+        </div>
       </div>
     </div>
   </main>
@@ -65,11 +84,68 @@
   <footer class="py-6 border-t border-gray-200 dark:border-white/10 bg-gray-100/50 dark:bg-black text-center text-sm text-gray-500 dark:text-gray-400">© 2025 Free Fire Tools & Blog.</footer>
   <script src="../js/main.js"></script>
   <script>
-    document.querySelector('.btn-copy-id').onclick = function() {
-      var id = document.getElementById('visit-id').value.trim();
-      if (!id) { alert('Pehle Player ID enter karein.'); return; }
-      navigator.clipboard.writeText(id).then(function() { alert('ID copied! Ab share kar sakte hain.'); });
-    };
+
+    (function(){
+      var btn = document.querySelector('.btn-start-visits');
+      var uidEl = document.getElementById('visits-uid');
+      var regionEl = document.getElementById('visits-region');
+      var loading = document.getElementById('visits-loading');
+      var box = document.getElementById('visits-result');
+      var nick = document.getElementById('vr-nick');
+      var level = document.getElementById('vr-level');
+      var regionTxt = document.getElementById('vr-region');
+      var likes = document.getElementById('vr-likes');
+      var success = document.getElementById('vr-success');
+      var fail = document.getElementById('vr-fail');
+      var text = document.getElementById('vr-text');
+
+      async function fetchVisits(uid, region){
+        var base = 'http://spam.sukhdaku.qzz.io:2044/visits/visits?uid=' + encodeURIComponent(uid) + '&region=' + encodeURIComponent(region);
+        try{
+          var r = await fetch(base, { mode: 'cors' });
+          if (!r.ok) throw new Error('Request failed: ' + r.status);
+          return await r.text();
+        }catch(e){
+          // fallback reader that returns wrapped markdown + JSON
+          var r2 = await fetch('https://r.jina.ai/' + base);
+          if (!r2.ok) throw new Error('Request failed (fallback): ' + r2.status);
+          return await r2.text();
+        }
+      }
+      function parseMaybeWrappedJSON(raw){
+        try { return JSON.parse(raw); } catch(_) {}
+        var first = raw.indexOf('{'); var last = raw.lastIndexOf('}');
+        if (first !== -1 && last > first){
+          try { return JSON.parse(raw.slice(first, last+1)); } catch(_) {}
+        }
+        var m = raw.match(/\{[\s\S]*\}/); if (m){ try { return JSON.parse(m[0]); } catch(_) {} }
+        throw new Error('Invalid JSON: ' + raw.slice(0,120));
+      }
+      async function onClick(){
+        var uid = (uidEl.value || '').trim();
+        var region = (regionEl.value || 'ind').trim();
+        if (!uid){ alert('Pehle Player ID enter karein.'); return; }
+        loading.classList.remove('hidden'); box.classList.add('hidden');
+        try{
+          var raw = await fetchVisits(uid, region);
+          var data = parseMaybeWrappedJSON(raw);
+          nick.textContent = data.nickname || data.nikname || '—';
+          level.textContent = data.level != null ? String(data.level) : '—';
+          regionTxt.textContent = (data.region || region || '').toUpperCase();
+          likes.textContent = data.likes != null ? String(data.likes) : '—';
+          success.textContent = data.success != null ? String(data.success) : '—';
+          fail.textContent = data.fail != null ? String(data.fail) : '—';
+          text.textContent = 'UID: ' + (data.uid || uid);
+          box.classList.remove('hidden');
+        }catch(e){
+          text.textContent = 'Fetch/Parse error. ' + (e && e.message ? e.message : 'Try again later.');
+          box.classList.remove('hidden');
+        }finally{
+          loading.classList.add('hidden');
+        }
+      }
+      btn && btn.addEventListener('click', onClick);
+    })();
   </script>
 </body>
 </html>
